# Melody-Sync

./: .gitignore  README.md  check_metadata.py  pyproject.toml  requirements.txt
docs/: INDEX.md
docs/handbook/: DocumentationStandard.md
docs/mks/: Manifesto.md  README.md  timeline.md
docs/mks/project-history/: INDEX.md  S1.1-Song.md  S1.2-Metadata.md  S1.3-Discovery.md  S1.4-Scanner.md  S1.5-Statistics.md  S1.6-CLI.md  S1.7-Testing.md  S1.8-LibraryStatistics.md  S1.9-Discovery.md
docs/project/: DocumentationNotes.md
docs/project/architecture-review/: ArchitectureReview.md
docs/standards/handbook/: DocumentationStandard.md
docs/standards/templates/: BaseDocument.md  README.md  TestTemplate.md
docs/templates/: ADRTemplate.md  HandbookTemplate.md  HistoryTemplate.md  SprintTemplate.md
journal/: README.md
journal/capitulos/:  01-a-primeira-fundacao.md
src/melody_sync/: __main__.py  cli.py
src/melody_sync/commands/: scan.py
src/melody_sync/core/scanner/: discovery.py  metadata.py  scanner.py  statistics.py
src/melody_sync/models/: library_statistics.py  song.py
src/melody_sync/services/: metadata.py  music.py  statistics.py
src/melody_sync/ui/: console.py  panels.py  progress.py  statistics.py  tables.py
tests/: README.md  conftest.py
tests/core/: test_discovery.py  test_metadata.py  test_scanner.py  test_statistics.py
tests/models/: test_library_statistics.py  test_song.py
